// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DialogTitle /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 calc(var(--pv-size-base) * 6);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  gap: calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 12);
  border-bottom: 1px solid var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-h4-weight);
  font-size: var(--pv-text-h4-size);
  line-height: var(--pv-text-h4-height);
  letter-spacing: var(--pv-text-h4-spacing);
}

<header
    class="my-class-name emotion-0"
    data-key="dialog.title"
  >
    <h4
      class="emotion-1"
    >
      Title
    </h4>
  </header>
</DocumentFragment>
`;

exports[`<DialogTitle /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 calc(var(--pv-size-base) * 6);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  gap: calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 12);
  border-bottom: 1px solid var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-h4-weight);
  font-size: var(--pv-text-h4-size);
  line-height: var(--pv-text-h4-height);
  letter-spacing: var(--pv-text-h4-spacing);
}

<header
    class="emotion-0"
    data-key="dialog.title"
  >
    <h4
      class="emotion-1"
    >
      Title
    </h4>
  </header>
</DocumentFragment>
`;
